# larkup

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .npmignore  .npmrc  .prettierignore  .tmp-diff.patch  .yamllint  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-ENTERPRISE.md  README.md  SECURITY.md  auto-publish.sh  docker-compose.e2e.yml  docker-compose.yml  next.config.mjs  package.json  patch-agent-server-2.js  patch-agent-server.js  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  scratch.ts  start.sh  test-compose.yml  test-e2e.sh  test-import.js  test_scrape.json  tsconfig.tsbuildinfo  turbo.json
.agents/: AGENTS.md
.agents/commands/: changeset.md  gh-fix-lint.md  larkup-plan.md  pr.md
.changeset/: add-doc-editor.md  cli-api-parity.md  persistent-lancedb-s3.md  smart-media-indexing.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q_and_a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  desktop-release.yml  docker-build.yml  e2e.yml  npm-publish.yml
.husky/: commit-msg  pre-push
app/: globals.css
app/configure/: page.tsx
app/data/: page.tsx
app/index-data/: page.tsx
app/server/: page.tsx
apps/api/: .env.example  README.md  package.json
apps/cli/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/desktop/: .gitignore  README.md  dev.sh  package-lock.json  package.json  test_nav.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: docs.json  style.css
apps/e2e/: .env.e2e.example  .env.example  Dockerfile  README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
apps/hub/: README.md  package.json
apps/landing/: package.json  pnpm-lock.yaml
apps/larkup-proxy/: .env.example  README.md  package.json  tsconfig.json
apps/sdk/py-sdk/: README.md  publish.sh  pyproject.toml
apps/sdk/py-sdk/src/larkup/: __init__.py  client.py  types.py
apps/sdk/py-sdk/src/larkup_rag/: __init__.py  client.py  types.py
apps/sdk/py-sdk/tests/: test_client.py
apps/web/: .npmignore  next.config.mjs  package.json  parse_log.mjs  tsconfig.json  tsconfig.tsbuildinfo  verify-models.mjs
cli/: index.ts
components/: app-sidebar.tsx
components/configure/: configure-form.tsx  store-fields.tsx
components/data/: corpus-panel.tsx  data-workspace.tsx  firecrawl-notice.tsx  jobs-panel.tsx  paste-panel.tsx  scrape-panel.tsx
components/demo/: demo-workspace.tsx
components/index/: index-workspace.tsx
components/ui/: tabs.tsx  (+1 more)
core/: config-store.ts  documents-store.ts  index-store.ts  jobs-store.ts  stages.ts  types.ts  workspace.ts
docker/: Dockerfile  copy.sh  docker-compose-prod.yaml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yaml  entrypoint.sh  package.json  rebuild.sh
docs/: index.mdx
e2e/: .env.example  Dockerfile  README.md  global-setup.ts  global-teardown.ts  package.json  playwright.cli.config.ts  playwright.config.ts
public/: Free_Proxy_List2.json  free-proxy-list.json
scripts/: auto-publish.sh  install-local.sh  publish-desktop.sh  publish-docker.sh  publish-npm.sh  publish-pypi.sh  release-desktop.sh  run.sh  start.sh  test-e2e.sh  test-install-scripts.sh  upload-desktop-releases.mjs
(+385 files in other folders)
