[package]
name = "larkup-desktop"
version = "0.1.0"
description = "Larkup Desktop — native wrapper for Larkup Studio"
authors = ["Larkup"]
edition = "2021"

[lib]
name = "larkup_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
libc = "0.2.186"
