[project]
name = "larkup-rag"
version = "0.1.0"
description = "Official Python SDK for the Larkup RAG API"
readme = "README.md"
authors = [
    { name = "Abdelrahman", email = "abdelrahmanaboneda@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]
