[project]
name = "larkup-rag"
version = "0.1.0"
description = "Official Python SDK for the Larkup RAG API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Abdelrahman", email = "abdelrahmanaboneda@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["rag", "retrieval-augmented-generation", "larkup", "ai", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://larkup.de"
Documentation = "https://larkup.de/docs"
Repository = "https://github.com/BuddyHere-AI/buddy-rag"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]
